--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "prettier:write": "prettier --write '**/{*.js,*.jsx,*.ts,*.tsx,package.json}'"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/material": "^5.14.10",
+    "@types/node": "^20.6.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "prettier": "^3.0.3",
