--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
+    "@types/lodash": "^4.14.199",
     "@types/node": "^20.6.4",
+    "axios": "^1.5.0",
+    "dayjs": "^1.11.10",
     "localforage": "^1.10.0",
+    "lodash": "^4.17.21",
     "match-sorter": "^6.3.1",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
